update pages, add block gif

--- a/example/templates/blocked.html
+++ b/example/templates/blocked.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <main class="container">
-      <h1>Product</h1>
+      <h1>Blocked</h1>
+      <img src="img/block.gif"></img>
     </main>
   </body>
 </html>
