--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -57,8 +57,8 @@
           </hgroup>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis est vel velit bibendum ultrices. Sed aliquam tortor vel odio fermentum ullamcorper eu vitae neque. Sed non diam at tellus venenatis viverra. Vestibulum et leo laoreet arcu tempor eleifend venenatis ac leo. Pellentesque euismod justo sed nisl sollicitudin varius. Duis venenatis nisl sit amet ante rutrum posuere. Etiam nec ullamcorper leo, sed placerat mauris.</p>
           <figure>
-            <img src="https://source.unsplash.com/3Ijt7UkSBYE/1500x750" alt="Architecture">
-            <figcaption>Image from <a href="https://unsplash.com">unsplash.com</a></figcaption>
+            <img src="/img/photo-1.jpeg" alt="Architecture">
+            <figcaption>Image from me</figcaption>
           </figure>
           <h3>Nulla augue metus</h3>
           <p>Pacilisis sed ante ut, posuere volutpat quam. Maecenas maximus blandit mi ac finibus. Proin quis lacinia tellus. Aliquam erat volutpat. Aliquam erat volutpat. Phasellus suscipit nisi augue, id accumsan tortor auctor ut. Duis odio arcu, egestas nec nulla vel, fermentum bibendum ex.</p>
