finish up most features, dockerize

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
     <div class="hero" data-theme="dark">
       <nav class="container-fluid">
         <ul>
-          <li><a href="./" class="contrast" onclick="event.preventDefault()"><strong>Brand</strong></a></li>
+          <li><a href="" class="contrast" onclick="event.preventDefault()"><strong>Brand</strong></a></li>
         </ul>
         <ul>
           <li>
