--- a/templates/subscribed.html
+++ b/templates/subscribed.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/pico.min.css">
-    <link rel="stylesheet" href="css/subscribed.css">
+    <link rel="stylesheet" href="/css/pico.min.css">
+    <link rel="stylesheet" href="/css/subscribed.css">
     <title>Subscribed!</title>
   </head>
   <body>
